@startuml
'https://plantuml.com/class-diagram

abstract class BaseModel
abstract class WcdBaseModel
BaseModel <|-- WcdBaseModel
WcdBaseModel <|-- Cache
WcdBaseModel <|-- SsdbDatabase
WcdBaseModel <|-- Person
WcdBaseModel <|-- WcdImportBot
WcdBaseModel <|-- WCDItem
WCDItem <|-- WikipediaArticle
WCDItem <|-- WikipediaReference
WcdBaseModel <|-- WikipediaReferenceSchema
WikipediaReferenceSchema <|-- EnglishWikipediaReferenceSchema
'BaseException <|-- MissingInformationError
'BaseException <|-- MoreThanOneNumberError
'BaseException <|-- NotLoggedInError
'BaseException <|-- TimeParseException

class EnglishWikipediaReferenceSchema{
return_object()
}

class WikipediaReferenceSchema{
first_parameter
second_parameter
template_name
}

class WikipediaReference {
'access_date
'agency
'archive_date
'archive_format
'archive_url
'arxiv
'asin
'asin_tld
'at
'author
'author1
'author10
'author1_first
'author1_last
'author1_link
'author2
'author2_first
'author2_last
'author2_link
'author3
'author3_first
'author3_last
'author3_link
'author4
'author4_first
'author4_last
'author4_link
'author5
'author5_first
'author5_last
'author5_link
'author6
'author7
'author8
'author9
'author_first
'author_first1
'author_first2
'author_first3
'author_first4
'author_first5
'author_given
'author_given1
'author_given2
'author_given3
'author_given4
'author_given5
'author_last
'author_last1
'author_last2
'author_last3
'author_last4
'author_last5
'author_link
'author_link1
'author_link2
'author_link3
'author_link4
'author_link5
'author_mask
'author_mask1
'author_mask2
'author_mask3
'author_mask4
'author_mask5
'author_surname
'author_surname1
'author_surname2
'author_surname3
'author_surname4
'author_surname5
'authors
'bibcode
'bibcode_access
'biorxiv
'book_title
'chapter
'chapter_format
'chapter_url
'chapter_url_access
'citeseerx
'conference
'conference_url
'contribution
'date
'degree
'department
'df
'display_authors
'display_editors
'display_subjects
'display_translators
'doi
'doi_access
'doi_broken_date
'edition
'editor
'editor1
'editor1_first
'editor1_last
'editor1_link
'editor2
'editor2_first
'editor2_last
'editor2_link
'editor3
'editor3_first
'editor3_last
'editor3_link
'editor4
'editor4_first
'editor4_last
'editor4_link
'editor5
'editor5_first
'editor5_last
'editor5_link
'editor_first
'editor_first1
'editor_first2
'editor_first3
'editor_first4
'editor_first5
'editor_last
'editor_last1
'editor_last2
'editor_last3
'editor_last4
'editor_last5
'editor_link
'editor_link1
'editor_link2
'editor_link3
'editor_link4
'editor_link5
'editor_mask
'editor_mask1
'editor_mask2
'editor_mask3
'editor_mask4
'editor_mask5
'editors
'eissn
'encyclopedia
'eprint
'first
'first1
'first10
'first2
'first3
'first4
'first5
'first6
'first7
'first8
'first9
'first_parameter
'format
'hdl
'hdl_access
'host
'host1
'host2
'host3
'host4
'host5
'hosts
'id
'interviewer
'interviewer_first
'interviewer_given
'interviewer_last
'interviewer_surname
'interviewers
'isbn
'ismn
'issn
'issue
'jfm
'journal
'jstor
'jstor_access
'language
'last
'last1
'last10
'last2
'last3
'last4
'last5
'last6
'last7
'last8
'last9
'lay_date
'lay_format
'lay_source
'lay_url
'lccn
'location
'magazine
'medium
'message_id
'mode
'mr
'name_list_style
'news_class
'newsgroup
'newspaper
'no_pp
'number
'oclc
'ol
'ol_access
'orig_date
'orig_year
'osti
'osti_access
'others
'
's
'persons_without_role
'pmc
'pmc_embargo_date
'pmid
'postscript
'publication_date
'publication_place
'publisher
'quote
'quote_
'quote_s
'ref
'registration
'rfc
's2cid
's2cid_access
'sbn
'script_chapter
'script_quote
'script_title
'second_parameter
'series
'ssrn
'subject
'subject_mask
'subscription
'template_name
'time
'title
'title_link
'trans_chapter
'trans_quote
'trans_title
'transcripturl
'translator_first
'translator_first1
'translator_first2
'translator_first3
'translator_first4
'translator_first5
'translator_last
'translator_last1
'translator_last2
'translator_last3
'translator_last4
'translator_last5
'translator_link
'translator_link1
'translator_link2
'translator_link3
'translator_link4
'translator_link5
'translator_mask
'translator_mask1
'translator_mask2
'translator_mask3
'translator_mask4
'translator_mask5
'translators
'type
'url
'url_access
'url_status
'via
'volume
'website
'work
'year
'zbl
__clean_wiki_markup_from_strings__()
__detect_archive_urls__()
__detect_google_books_id__()
__detect_internet_archive_id__()
__extract_first_level_domain__()
__find_number__()
__generate_first_level_domain_hash__()
__generate_hashes__()
__generate_reference_hash__()
__get_first_level_domain__
__get_numbered_person__()
__get_numbered_persons__()
__insert_reference_in_cache__()
__merge_date_into_publication_date__()
__merge_lang_into_language__()
__merge_place_into_location__()
__parse_known_role_persons__()
__parse_persons__()
__parse_roleless_persons__()
__validate_time__()
check_and_upload_reference_item_to_wikibase_if_missing()
finish_parsing_and_generate_hash()
get_wcdqid_from_cache()
has_first_level_domain_url_hash()
has_hash()
template_url()
upload_reference_and_insert_in_the_cache_if_enabled()
wikibase_url()
}

class WikipediaArticle{
__calculate_hashed_template_distribution__()
__compare_and_update_all_references__()
__compare_and_update_page__()
__compare_data_and_update__()
__extract_and_parse_references__()
__fetch_page_data__()
__fetch_wikidata_qid__()
__fix_aliases__()
__fix_class_key__()
__fix_dash__()
__fix_keys__()
__generate_hash__()
__get_title_from_wikidata__()
__get_wikipedia_article_from_title__()
__get_wikipedia_article_from_wdqid__()
__page_has_already_been_uploaded__()
__parse_templates__()
__print_hash_statistics__()
__upload_page_and_references__()
__upload_references_and_websites_if_missing__()
absolute_url()
Config()
extract_and_parse_and_upload_missing_items_to_wikibase()
is_redirect()
number_of_hashed_references()
number_of_references()
percent_of_references_with_a_hash()
underscored_title()
url()
wikibase_url()
}

class Person {
author_name_string
given
has_number
link
mask
name_string
number_in_sequence
orcid
role
surname
}

class Cache{
ssdb
add_()
add_reference()
add_website()
check__and_get_wikicitations_qid()
check_reference_and_get_wikicitations_qid()
check_website_and_get_wikicitations_qid()
connect()
delete_key()
flush_database()
get_cache_information()
}

class SsdbDatabase{
connection
host
port
connect()
delete()
flush_database()
get_info()
get_value()
set_value()
}

class WcdImportBot{
language_code
language_wcditem
max_count
s
percent_references_hashed_in_total
title
total_number_of_hashed_references
total_number_of_references
wikimedia_site
__calculate_statistics__()
__setup_argparse_and_return_args__()
delete_one_()
extract_and_upload_all_s_to_wikicitations()
get__by_title()
print_statistics()
rinse_all_items_and_cache()
run()
}

enum EnglishWikipediaTemplatePersonRole {
AUTHOR
EDITOR
HOST
INTERVIEWER
TRANSLATOR
UNKNOWN
}

abstract class WCDItem {
}

''enum WCDProperty {
'ACCESS_DATE
'ARCHIVE_DATE
'ARCHIVE_URL
'AUTHOR
'AUTHOR_NAME_STRING
'CITATIONS
'DOI
'EDITOR
'EDITOR_NAME_STRING
'FAMILY_NAME
'FIRST_LEVEL_DOMAIN_STRING
'FULL_WORK_AVAILABLE_AT_URL
'GIVEN_NAME
'HASH
'HOST_STRING
'INSTANCE_OF
'INTERVIEWER_STRING
'ISBN_10
'ISBN_13
'ISSUE
'LAST_UPDATE
'LUMPED_AUTHORS
'MEDIAWIKI__ID
'NAME_MASK
'ORCID
'S
'_REVISION_ID
'PMID
'PUBLICATION_DATE
'PUBLISHED_IN
'RETRIEVED_DATE
'SERIES_ORDINAL
'SOURCE_WIKIPEDIA
'STRING_CITATIONS
'TEMPLATE_NAME
'TITLE
'TRANSLATOR_NAME_STRING
'URL
'VOLUME
'WEBSITE
'WEBSITE_STRING
'WIKIDATA_QID
'}
@enduml